# companies

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
academic-research/: COMPANY.md  Makefile  NOTICE  README.md  manifest.yaml  pyproject.toml
academic-research/scripts/: build.py
academic-research/tests/: test_build.py  test_check.py
bell-labs/: COMPANY.md  MISSION.md  Makefile  NOTICE  ORG.md  README.md  manifest.yaml  pyproject.toml
bell-labs/colloquium/: README.md
bell-labs/hallway/: README.md
bell-labs/handoff/: README.md
bell-labs/instigation/: README.md
bell-labs/journal/: README.md
bell-labs/memoranda/: README.md
bell-labs/problem-board/: README.md
bell-labs/research/: PLAN-30D.md  README.md
bell-labs/research/cycle-1-cheap-talk/L3/: pyproject.toml
bell-labs/scripts/: build.py  check.py
bell-labs/sunsets/: README.md
bell-labs/tests/: test_build.py  test_check.py
claude-for-financial-services/: COMPANY.md  NOTICE  README.md  manifest.yaml  pyproject.toml
claude-for-financial-services/scripts/: build.py
claude-for-financial-services/tests/: test_build.py
financial-services/: .gitignore  .paperclip.yaml  COMPANY.md  Makefile  NOTICE  README.md  manifest.yaml  pyproject.toml
financial-services/scripts/: build.py  check.py
financial-services/tests/: test_build.py  test_check.py
legal-services/: .gitignore  COMPANY.md  Makefile  NOTICE  README.md  manifest.yaml  pyproject.toml
legal-services/scripts/: build.py  check.py  extract_upstream_metadata.py
legal-services/tests/: test_build.py  (+1 more)
(+284 files in other folders)
